; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_mlx5.c_need_uuar_lock.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_mlx5.c_need_uuar_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_context = type { i32, i32 }

@mlx5_single_threaded = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx5_context*, i32)* @need_uuar_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @need_uuar_lock(%struct.mlx5_context* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mlx5_context*, align 8
  %5 = alloca i32, align 4
  store %struct.mlx5_context* %0, %struct.mlx5_context** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i64, i64* @mlx5_single_threaded, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %8, %2
  store i32 0, i32* %3, align 4
  br label %25

12:                                               ; preds = %8
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.mlx5_context*, %struct.mlx5_context** %4, align 8
  %15 = getelementptr inbounds %struct.mlx5_context, %struct.mlx5_context* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.mlx5_context*, %struct.mlx5_context** %4, align 8
  %18 = getelementptr inbounds %struct.mlx5_context, %struct.mlx5_context* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = sub nsw i32 %16, %19
  %21 = mul nsw i32 %20, 2
  %22 = icmp sge i32 %13, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %25

24:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %23, %11
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
